Make changes to update front with real money value
